2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj: Local-copy schemas.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj: Nuke another project reference
	  local copy.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj: Exorcise more unwanted local
	  copy.

2009-02-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs:
	  Fixed compiler warnings.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.mds:
	* MonoDevelop.XmlEditor.mdp:
	* MonoDevelop.XmlEditor.csproj: Migrated to MSBuild file
	  format.

2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Fix
	  duplicated ':' when completing incompletely parsed names
	  for the path bar.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* MonoDevelop.XmlEditor.mdp:
	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs:
	*
	  gtk-gui/MonoDevelop.XmlEditor.Gui.XmlEditorOptionsPanelWidget.cs:
	  Flush.

2009-02-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	  Don't use an IActionCompletionData, just generate the
	  completion text as needed and use | as a caret marker.
	  Fixes Bug 471681 - xml tag completion not working.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.mdp: Flush project format changes.

2009-01-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Add closing tag
	completion to all XML docs.

2009-01-06  Michael Hutchinson  <mhutchinson@novell.com>
